--- a/main.css
+++ b/main.css
@@ -1,7 +1,12 @@
 body {
+  text-align: center;
+  margin-top: 50px;
+  color: #FFF;
+  text-shadow: -1px -1px #FFD91F;
   background-color: red;
 }
 
 h1 {
-  text-align: center;
+  font-family: monospace;
+  color: black;
 }
