Update state of square on each turn & display X or O

--- a/main.css
+++ b/main.css
@@ -30,3 +30,15 @@ td {
   text-align: center;
   background-color: #FFD91F;
 }
+
+.X:before {
+  font-family: monospace;
+  font-size: 200%;
+  content: 'X';
+}
+
+.O:before {
+  font-family: monospace;
+  font-size: 200%;
+  content: 'O';
+}
