--- a/main.css
+++ b/main.css
@@ -12,6 +12,10 @@ h1 {
   text-shadow: none;
 }
 
+h2 {
+  margin: 0;
+}
+
 #board {
   margin: auto;
   height: 390px;
@@ -29,6 +33,21 @@ td {
   border: 2px solid #1B08BA;
   text-align: center;
   background-color: #1F81FF;
+}
+
+#clock {
+  width: 100px;
+  padding: 3px;
+  border: 2px solid #1B08BA;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #1F81FF;
+}
+
+button {
+  width: 45px;
+  background-color: #7AEDFC;
 }
 
 .X:before {
