Style start/stop buttons

--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,8 @@ td {
 button {
   width: 45px;
   background-color: #7AEDFC;
+  border: 2px solid #1B08BA;
+  display: inline-block;
 }
 
 .X:before {
