--- a/css/main.css
+++ b/css/main.css
@@ -91,17 +91,25 @@ button {
 
 @media screen and (max-width: 510px) {
   div.game-container {
-    height: 300px;
-    width: 300px;
+    height: 340px;
+    width: 340px;
   }
   #clock {
     width: 65%;
+    padding: 0;
+    border: none;
+  }
+  #timer {
+    padding: 5% 0;
+    font-size: 2em;
+    border: 3px solid #1B08BA;
   }
   button {
-    margin: auto;
+    margin: 0;
     display: block;
+    padding: 6%;
     width: 100%;
     font-size: .55em;
+    border-radius: 0;
   }
-
 }
